Added job salary. Tweaked some UI elements.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<section class="section has-background-white-bis" style="border-bottom:1px dashed #D3D3D3">
+<section class="section has-background-white" style="border-bottom:1px dashed #D3D3D3">
   <div class="container">
     <div class="columns is-centered">
       <div class="container has-text-centered">
