--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -23,7 +23,7 @@
           </a>
           <a class="button is-small">
             <span class="icon"><i class="fa fa-wifi"></i></span>
-            <span>Remote only</span>
+            <span>Chỉ việc làm Remote</span>
           </a>
           </div>
           </div>
