--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,8 +11,8 @@
                     <div class="column is-3">
                          <h2><strong>Dịch vụ</strong></h2>
                         <ul>
-                            <li><a href="/jobpy-search/">Jobpify Search</a></li>
-                            <li><a href="/jobpy-cv-maker/">Jobpify CV Maker</a></li>
+                            <li><a href="/jobpify-search">Jobpify Search</a></li>
+                            <li><a href="/jobpify-cv-maker">Jobpify CV Maker</a></li>
                         </ul>
                     </div>
                     <div class="column is-4">
