--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,14 +29,14 @@
               <h1 class="title is-5"><%= Rails.configuration.application_name %></h1>
             <% end %>
                 <div class="navbar-dropdown">
-                  <a class="navbar-item" href="/jobpy-search/">
+                  <a class="navbar-item" href="/jobpify-search">
                     <p>
                     <strong>Jobpify Search</strong>
                     <br>
                     <small>Tìm kết quả đồng thời trên nhiều trang tìm việc khác nhau.</small>
                     </p>
                   </a>
-                  <a class="navbar-item" href="/forum/">
+                  <a class="navbar-item" href="/forum">
                     <p>
                     <strong>Jobpify CV Maker</strong>
                     <br>
