--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,13 +1,13 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Đăng nhập", new_session_path(resource_name) %><br />
+  <p>Đã có tài khoản? <%= link_to "Đăng nhập", new_session_path(resource_name) %> ngay</p>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Đăng ký", new_registration_path(resource_name) %><br />
+  <p>Chưa có tài khoản? <%= link_to "Đăng ký", new_registration_path(resource_name) %> ngay</p>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Quên mật khẩu?", new_password_path(resource_name) %><br />
+  <%= link_to "Quên mật khẩu?", new_password_path(resource_name) %>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
