--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -44,7 +44,7 @@
           <div class="control">
             <label for="job[remote_ok]">
               <%= f.input :remote_ok, required: false, input_html: { class: "checkbox"}, wrapper: false, label: false %>
-              Remote
+              Việc làm Remote
             </label><i class="fa fa-wifi"></i>
           </div>
         </div>
