--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -123,7 +123,7 @@
     </div>
     <hr />
     <div class="control has-text-centered">
-      <%= f.submit "Đăng bài", class: "button is-danger is-large is-rounded mv4" %>
+      <%= f.submit "Đăng bài tuyển dụng", class: "button is-danger is-large is-rounded mv4" %>
     </div>
 <% end %>
 </div>
