--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -18,7 +18,7 @@
           </div>
           </form>
           <a class="button is-small" href="/jobs">
-            <span class="icon"><i class="fa fa-trash"></i></span>
+            <span class="icon"><i class="fa fa-minus-square"></i></span>
             <span>Reset bộ lọc</span>
           </a>
           <a class="button is-small">
@@ -48,11 +48,17 @@
           <ul class="pv3">
             <li class="inline-block f6">Quyền của người đăng: </li>
             <li class="inline-block">
-              <%= link_to 'Xem', job, class: 'button is-small is-outlined' %></li>
+              <!--<%= link_to 'Xem', job, class: 'button is-small is-outlined' %></li>-->
+              <%= link_to raw("<span class=\"icon is-small\"><i class=\"fa fa-eye\"></i></span>"), job, class: "button is-small is-outlined" %></li>
+              
             <li class="inline-block">
-              <%= link_to 'Chỉnh sửa', edit_job_path(job), class: 'button is-small is-outlined' %></li>
+              <!--<%= link_to 'Chỉnh sửa', edit_job_path(job), class: 'button is-small is-outlined' %></li>-->
+              <%= link_to raw("<span class=\"icon is-small\"><i class=\"fa fa-pencil\"></i></span>"), edit_job_path(job), class: "button is-small is-outlined" %></li>
+              
             <li class="inline-block">
-              <%= link_to 'Xóa', job, method: :delete, data: { confirm: 'Bạn có chắc là muốn xóa công việc này?' }, class: 'button is-small is-outlined' %></li>
+              <!--<%= link_to 'Xóa', job, method: :delete, data: { confirm: 'Bạn có chắc là muốn xóa công việc này?' }, class: 'button is-small is-outlined' %></li>-->
+              <%= link_to raw("<span class=\"icon is-small\"><i class=\"fa fa-trash\"></i></span>"), job, method: "delete", data: { confirm: 'Bạn có chắc là muốn xóa công việc này?'}, class: "button is-small is-outlined" %></li>
+              
             <li class="inline-block">
               <%= link_to 'Mở trong tab mới', job, class: 'button is-small is-outlined', target: :_blank %></li>
             <% else %> 
