--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -103,11 +103,14 @@
       <ul class="pv3">
         <li class="pv1 f6">Quyền của người đăng: </li>
         <li class="pv1 inline-block">
-          <%= link_to 'Xem', @job, class: 'button is-small is-outlined' %></li>
+          <!--<%= link_to 'Xem', @job, class: 'button is-small is-outlined' %></li>-->
+          <%= link_to raw("<span class=\"icon is-small\"><i class=\"fa fa-eye\"></i></span><span>Xem</span>"), @job, class: "button is-small is-outlined" %></li>
         <li class="pv1 inline-block">
-          <%= link_to 'Chỉnh sửa', edit_job_path(@job), class: 'button is-small is-outlined' %></li>
+          <!--<%= link_to 'Chỉnh sửa', edit_job_path(@job), class: 'button is-small is-outlined' %></li>-->
+          <%= link_to raw("<span class=\"icon is-small\"><i class=\"fa fa-pencil\"></i></span><span>Chỉnh sửa</span>"), edit_job_path(@job), class: "button is-small is-outlined" %></li>
         <li class="pv1 inline-block">
-          <%= link_to 'Xóa', @job, method: :delete, data: { confirm: 'Bạn có chắc là muốn xóa công việc này?' }, class: 'button is-small is-outlined' %></li>
+          <!--<%= link_to 'Xóa', @job, method: :delete, data: { confirm: 'Bạn có chắc là muốn xóa công việc này?' }, class: 'button is-small is-outlined' %></li>-->
+          <%= link_to raw("<span class=\"icon is-small\"><i class=\"fa fa-trash\"></i></span><span>Xóa</span>"), @job, method: "delete", data: { confirm: 'Bạn có chắc là muốn xóa công việc này?'}, class: "button is-small is-outlined" %></li>
       </ul>
     <% end %>
   </div>
