UI tweaks and added some filters.

--- a/app/views/jobs/dashboard.html.erb
+++ b/app/views/jobs/dashboard.html.erb
@@ -32,13 +32,13 @@
                         <div class="tile is-parent">
                             <article class="tile is-child box">
                                 <p class="title">439</p>
-                                <p class="subtitle">Đã xem thông tin công ty của bạn</p>
+                                <p class="subtitle">Đã xem thông tin của bạn</p>
                             </article>
                         </div>
                         <div class="tile is-parent">
                             <article class="tile is-child box">
                                 <p class="title">59</p>
-                                <p class="subtitle">Đã xem bài đăng công việc của bạn</p>
+                                <p class="subtitle">Đã xem bài tuyển dụng của bạn</p>
                             </article>
                         </div>
                         <div class="tile is-parent">
