--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -23,8 +23,39 @@
           </a>
           <a class="button is-small">
             <span class="icon"><i class="fa fa-wifi"></i></span>
-            <span>Chỉ việc làm Remote</span>
+            <span>Chỉ việc làm remote</span>
           </a>
+
+         <!--<div class="dropdown is-hoverable">
+          <div class="dropdown-trigger">
+            <button class="button is-small" aria-haspopup="true" aria-controls="dropdown-menu">
+              <span>Giới tính</span>
+              <span class="icon is-small">
+                <i class="fa fa-angle-down" aria-hidden="true"></i>
+              </span>
+            </button>
+          </div>
+          <div class="dropdown-menu is-small" id="dropdown-menu" role="menu">
+            <div class="dropdown-content">
+              <a href="#" class="dropdown-item">
+                Nam
+              </a>
+              <a href="#" class="dropdown-item">
+                Nữ
+              </a>
+            </div>
+          </div>
+        </div> -->
+    
+          <div class="select is-small">
+            <select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value)">
+            <option selected>Giới tính: Tất cả</option>
+            <option value="#">Giới tính: Nam</option>
+            <option value="#">Giới tính: Nữ</option>
+            </select>
+          </div>
+      
+
           </div>
           </div>
       </div>
