UI tweaks such as: fixed remember me checkbox issue, replaced panel-heading with panel is-active, added sort by dropdown,...

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,3 +65,11 @@ textarea {
 .button {
   border-radius: 0;
 }
+.disable-this {
+  pointer-events: none;
+  cursor: block;
+  user-select: none;
+}
+.dropdown-content {
+  border-radius: 0;
+}
