--- a/app/views/jobs/_panel.html.erb
+++ b/app/views/jobs/_panel.html.erb
@@ -1,15 +1,25 @@
 <br>
 <nav class="panel">
-<p class="panel-heading">Hình thức:</p>
+ <a class="panel-block is-active disable-this">
+    <span class="panel-icon">
+      <i class="fa fa-briefcase" aria-hidden="true"></i>
+    </span>
+    Hình thức:
+</a>
 <%= link_to 'Toàn thời gian', jobs_path(job_type: "Toàn thời gian"), class: "panel-block" %>
 <%= link_to 'Bán thời gian', jobs_path(job_type: "Bán thời gian"), class: "panel-block" %>
-<%= link_to 'Tự do', jobs_path(job_type: "Tự do"), class: "panel-block" %>
 <%= link_to 'Hợp đồng', jobs_path(job_type: "Hợp đồng"), class: "panel-block" %>
+<%= link_to 'Tạm thời', jobs_path(job_type: "Tạm thời"), class: "panel-block" %>
 <%= link_to 'Thực tập', jobs_path(job_type: "Thực tập"), class: "panel-block" %>
 </nav>
 
 <nav class="panel">
-<p class="panel-heading">Trình độ:</p>
+ <a class="panel-block is-active disable-this">
+    <span class="panel-icon">
+      <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+    </span>
+    Trình độ:
+</a>
 <%= link_to 'Trên đại học', jobs_path, class: "panel-block" %>
 <%= link_to 'Đại học', jobs_path, class: "panel-block" %>
 <%= link_to 'Cao đẳng', jobs_path, class: "panel-block" %>
@@ -20,7 +30,7 @@
 
 <div class="control has-icons-left">
   <div class="select is-fullwidth">
-    <select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value)">
+    <select class="is-hovered" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value)">
     <option selected>Mức lương</option>
     <option value="?job_salary=1+-+3+triệu">1 - 3 triệu</option>
     <option value="?job_salary=3+-+5+triệu">3 - 5 triệu</option>
@@ -40,21 +50,9 @@
 
 <br>
 
-<!--<nav class="panel" style="padding-top:10px">
-<p class="panel-heading">Mức lương:</p>
-<%= link_to '1 - 3 triệu', jobs_path(job_salary: "1 - 3 triệu"), class: "panel-block" %>
-<%= link_to '3 - 5 triệu', jobs_path(job_salary: "3 - 5 triệu"), class: "panel-block" %>
-<%= link_to '5 - 7 triệu', jobs_path(job_salary: "5 - 7 triệu"), class: "panel-block" %>
-<%= link_to '7 - 10 triệu', jobs_path(job_salary: "7 - 10 triệu"), class: "panel-block" %>
-<%= link_to '10 - 15 triệu', jobs_path(job_salary: "10 - 15 triệu"), class: "panel-block" %>
-<%= link_to '15 - 20 triệu', jobs_path(job_salary: "15 - 20 triệu"), class: "panel-block" %>
-<%= link_to '20 - 30 triệu', jobs_path(job_salary: "20 - 30 triệu"), class: "panel-block" %>
-<%= link_to 'Trên 30 triệu', jobs_path(job_salary: "Trên 30 triệu"), class: "panel-block" %>
-</nav>-->
-
 <div class="control has-icons-left">
   <div class="select is-fullwidth">
-    <select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value)">
+    <select class="is-hovered" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value)">
     <option selected>Khu vực</option>
     <option value="?location=An+Giang">An Giang</option>
     <option value="?location=Bà+Rịa+Vũng+Tàu">Bà Rịa Vũng Tàu</option>
@@ -122,6 +120,7 @@
     </select>
   </div>
   <span class="icon is-medium is-left">
-    <i class="fa fa-globe"></i>
+    <i class="fa fa-map-marker"></i>
   </span>
 </div>
+<br>
