--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,9 +44,9 @@
 .navbar-dropdown {
   border-radius: 0;
   box-shadow: none;
-  border-left: 1px dashed #D3D3D3;
-  border-right: 1px dashed #D3D3D3;
-  border-bottom: 1px dashed #D3D3D3;
+  border-left: 1px solid #D3D3D3;
+  border-right: 1px solid #D3D3D3;
+  border-bottom: 1px solid #D3D3D3;
 }
 .list {
   border-radius: 0;
