--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,27 +25,28 @@
       <div class="navbar-brand">
         <div class="navbar-item has-dropdown is-hoverable" style="border-right:1px solid #D3D3D3">
             <%= link_to root_path, class: "navbar-link" do %>
-            <img src="/images/logo_transparent_cropped.png" alt="rss feed" />
+            <!--<img src="/images/logo_transparent_cropped.png" alt="rss feed" />-->
+            <h5 class="title is-5"><b>Jobpify</b></h5>
             <% end %>
                 <div class="navbar-dropdown">
-                  <a class="navbar-item" href="/jobpify-search">
-                    <p>
-                    <strong>Jobpify Search</strong>
-                    <br>
-                    <small>Tìm kết quả đồng thời trên nhiều trang tìm việc khác nhau.</small>
-                    </p>
-                  </a>
                   <a class="navbar-item" href="/forum">
                     <p>
                     <strong>Jobpify CV Maker</strong>
                     <br>
-                    <small>Tạo hồ sơ xin việc online một cách dễ dàng</small>
+                    <small>Tạo hồ sơ xin việc online một cách dễ dàng.</small>
                     </p>
                   </a>
-                  <hr class="navbar-divider">
+                  <a class="navbar-item" href="/jobpify-search">
+                    <p>
+                    <strong>Jobpify Search</strong>
+                    <br>
+                    <small>Cơ sở dữ liệu việc làm từ Internet. Cập nhật liên tục.</small>
+                    </p>
+                  </a>
+                  <!--<hr class="navbar-divider">
                   <div class="navbar-item">
                     Một sản phẩm của Jobpify JSC
-                  </div>
+                  </div>-->
                 </div>
             </div>
       </div>
