--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -123,7 +123,7 @@
         <div class="column has-text-right">
           <div class="control" style="padding:0;float:right">
           <div class="tags has-addons">
-              <span class="tag is-dark">Đại học</span>
+            <%= job_education(job.job_education) %>
             <%= job_type(job.job_type) %>
             </div>
             </div>
