--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,10 @@
     <% end %>
      <nav class="navbar has-background-white" role="navigation" aria-label="main navigation" style="border-bottom:1px solid #D3D3D3">
       <div class="navbar-brand">
-        <div class="navbar-item has-dropdown is-hoverable" style="border-right:1px solid #D3D3D3">
+        <!--<div class="navbar-item has-dropdown is-hoverable" style="border-right:1px solid #D3D3D3">
             <%= link_to root_path, class: "navbar-link" do %>
-            <!--<img src="/images/logo_transparent_cropped.png" alt="rss feed" />-->
-            <h5 class="title is-5"><b>Jobpify</b></h5>
+            <img src="/images/logo_transparent_cropped.png" alt="rss feed" />
+            <h5 class="title is-5">Jobpify</h5>
             <% end %>
                 <div class="navbar-dropdown">
                   <a class="navbar-item" href="/forum">
@@ -43,12 +43,11 @@
                     <small>Cơ sở dữ liệu việc làm từ Internet. Cập nhật liên tục.</small>
                     </p>
                   </a>
-                  <!--<hr class="navbar-divider">
-                  <div class="navbar-item">
-                    Một sản phẩm của Jobpify JSC
-                  </div>-->
                 </div>
-            </div>
+            </div>-->
+            <a class="navbar-item" style="border-right:1px solid #D3D3D3">
+              <h5 class="title is-5">Jobpify</h5>
+            </a>
       </div>
       <div id="navbar" class="navbar-menu">
         <div class="navbar-start">
@@ -65,7 +64,7 @@
                   </a>
                 </div>
             </div>
-            <div class="navbar-item has-dropdown is-hoverable">
+            <!--<div class="navbar-item has-dropdown is-hoverable">
                 <a class="navbar-link">
                   Học sinh, sinh viên
                   </a>
@@ -77,10 +76,38 @@
                     Liên hệ dành cho học sinh, sinh viên
                   </a>
                 </div>
-            </div>
-              <a class="navbar-item" href="/jobs/">
+            </div>-->
+            <div class="navbar-item has-dropdown is-hoverable">
+                <a class="navbar-link">
+                  Học sinh, sinh viên
+                  </a>
+          <div class="navbar-dropdown">
+                  <a class="navbar-item" href="/forum">
+                    <p>
+                    <strong>Tìm việc làm</strong>
+                    <br>
+                    <small>Blah blah blah blah blah blah blah blah.</small>
+                    </p>
+                  </a>
+                  <a class="navbar-item" href="/forum">
+                    <p>
+                    <strong>Jobpify CV Maker</strong>
+                    <br>
+                    <small>Tạo hồ sơ xin việc online một cách dễ dàng.</small>
+                    </p>
+                  </a>
+                  <a class="navbar-item" href="/jobpify-search">
+                    <p>
+                    <strong>Jobpify Search</strong>
+                    <br>
+                    <small>Cơ sở dữ liệu việc làm từ Internet. Cập nhật liên tục.</small>
+                    </p>
+                  </a>
+                </div>
+          </div>
+              <!--<a class="navbar-item" href="/jobs/">
                 Tìm việc làm
-              </a>
+              </a>-->
         </div>
         <div class="navbar-end">
             <% if user_signed_in? %>
